--- a/Relatorios/Areas/Teste/Views/Teste/Index.cshtml
+++ b/Relatorios/Areas/Teste/Views/Teste/Index.cshtml
@@ -1,2 +1,6 @@
 ﻿@{Layout = "~/Views/Shared/_Layout.cshtml";}
+<!--
+https://@Context.Request.Host@Context.Request.PathBase/js/Chart.min.js;
+https://@Context.Request.Host@Context.Request.PathBase/js/Teste.js;
+script-->
 <canvas id="myChart" width="400" height="400"></canvas>
