--- a/Relatorios/Views/Shared/_Layout.cshtml
+++ b/Relatorios/Views/Shared/_Layout.cshtml
@@ -1,68 +1,48 @@
 ﻿<div id="renderBody"></div>
 <script>
+    let body = `@RenderBody()`;
+    let scriptsLink = [];
+    //obtem os scripts locais
+    if (body.indexOf('script-->') > -1) {
+        scriptsLink = body.substring(0, body.indexOf('script-->') + 9).replace('<!--', '').replace('script-->', '').replace(/\n|\r/g, "").split(';');
+        scriptsLink = scriptsLink[scriptsLink.length - 1] == '' ? scriptsLink.splice(0, scriptsLink.length - 1) : scriptsLink;
+    }
+
     let myElement = document.getElementById('renderBody');
     let shadow = myElement.attachShadow({
         mode: 'open'
     });
+    let scriptRef = document.createElement('script');
 
-    read();
-
-    function read() {
-        var xhr = new XMLHttpRequest;
-        xhr.open('GET', 'https://@Context.Request.Host@Context.Request.PathBase/js/Chart.min.js');
-        xhr.onload = show;
-        xhr.send();
+    function baixarPacote(url, callback) {
+        var oReq = new XMLHttpRequest();
+        oReq.onload = callback;
+        oReq.open("get", url, true);
+        oReq.send(null)
     }
 
-    function show() {
-        let scriptRef = document.createElement('script');
-        scriptRef.textContent = this.response;
-        shadow.appendChild(scriptRef);
+    var index = 0;
+    adicionarPacotes();
+    function adicionarPacotes() {
+        if (index < scriptsLink.length) {
+            baixarPacote(scriptsLink[index], adicionarScript);
+            index++;
+        }
+        else {
+            finalizar();
+        }
+    }
 
+    function adicionarScript(data) {
+        scriptRef.textContent += ';' + data.target.responseText;
+        adicionarPacotes();
+    }
+
+    function finalizar() {
         var html = document.createElement('div');
-        html.innerHTML = '@RenderBody()';
+        html.innerHTML = body.substring(body.indexOf('script-->') + 9, body.length);
         shadow.appendChild(html);
-
-        var script = document.createElement('script');
-        script.innerHTML = `
-        var ctx = shadow.getElementById("myChart").getContext('2d');
-        var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-        datasets: [{
-        label: '# of Votes',
-        data: [12, 19, 3, 5, 2, 3],
-        backgroundColor: [
-        'rgba(255, 99, 132, 0.2)',
-        'rgba(54, 162, 235, 0.2)',
-        'rgba(255, 206, 86, 0.2)',
-        'rgba(75, 192, 192, 0.2)',
-        'rgba(153, 102, 255, 0.2)',
-        'rgba(255, 159, 64, 0.2)'
-        ],
-        borderColor: [
-        'rgba(255,99,132,1)',
-        'rgba(54, 162, 235, 1)',
-        'rgba(255, 206, 86, 1)',
-        'rgba(75, 192, 192, 1)',
-        'rgba(153, 102, 255, 1)',
-        'rgba(255, 159, 64, 1)'
-        ],
-        borderWidth: 1
-        }]
-        },
-        options: {
-        scales: {
-        yAxes: [{
-        ticks: {
-        beginAtZero:true
-        }
-        }]
-        }
-        }
-        });
-    `;
-        shadow.appendChild(script);
+        shadow.appendChild(scriptRef);
     }
+
 </script>
