--- a/Relatorios/Views/Shared/_Layout.cshtml
+++ b/Relatorios/Views/Shared/_Layout.cshtml
@@ -1,27 +1,33 @@
 ﻿<div id="renderBody"></div>
-<script>
-    let body = `@RenderBody()`;
-    let scriptsLink = [];
+<script id="containerScript">
+    body = `@RenderBody()`;
+    scriptsLink = [];
+    stylesLink = [];
     //obtem os scripts locais
     if (body.indexOf('script-->') > -1) {
         scriptsLink = body.substring(0, body.indexOf('script-->') + 9).replace('<!--', '').replace('script-->', '').replace(/\n|\r/g, "").split(';');
         scriptsLink = scriptsLink[scriptsLink.length - 1] == '' ? scriptsLink.splice(0, scriptsLink.length - 1) : scriptsLink;
     }
+    //link script geral
+    scriptsLink.push('https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js');
+    scriptsLink.push('https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js');
+    //link script geral
+    stylesLink.push('https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css');
 
-    let myElement = document.getElementById('renderBody');
-    let shadow = myElement.attachShadow({
+    myElement = document.getElementById('renderBody');
+    shadow = myElement.attachShadow({
         mode: 'open'
     });
-    let scriptRef = document.createElement('script');
+    scriptRef = document.createElement('script');
 
     function baixarPacote(url, callback) {
-        var oReq = new XMLHttpRequest();
-        oReq.onload = callback;
-        oReq.open("get", url, true);
-        oReq.send(null)
+        var request = new XMLHttpRequest();
+        request.onload = callback;
+        request.open("get", url, true);
+        request.send(null);
     }
 
-    var index = 0;
+    index = 0;
     adicionarPacotes();
     function adicionarPacotes() {
         if (index < scriptsLink.length) {
@@ -34,15 +40,32 @@
     }
 
     function adicionarScript(data) {
-        scriptRef.textContent += ';' + data.target.responseText;
+        scriptRef.textContent += data.target.responseText + ';';
         adicionarPacotes();
     }
 
     function finalizar() {
         var html = document.createElement('div');
-        html.innerHTML = body.substring(body.indexOf('script-->') + 9, body.length);
+        html.innerHTML = body.indexOf('script-->') > -1 ? body.substring(body.indexOf('script-->') + 9, body.length) : body;
+        //adiciona link css local
+        for (var index = 0; index < stylesLink.length; index++) {
+            var cssLink = document.createElement('link');
+            cssLink.rel  = 'stylesheet';
+            cssLink.type = 'text/css';
+            cssLink.href = stylesLink[index];
+            shadow.appendChild(cssLink);
+        }
         shadow.appendChild(html);
         shadow.appendChild(scriptRef);
-    }
 
+        delete body;
+        delete scriptsLink;
+        delete myElement;
+        delete shadow;
+        delete scriptRef;
+        delete index;
+
+        var thisScript = document.getElementById('containerScript');
+        thisScript.parentNode.removeChild(thisScript);
+    }
 </script>
